[gd_scene load_steps=4 format=3 uid="uid://lik5hbaoghpj"]

[ext_resource type="Script" path="res://src/gameplay/GameState.gd" id="1"]
[ext_resource type="Script" path="res://src/gameplay/LevelMap.gd" id="2"]

[sub_resource type="TileSet" id="1"]

[node name="LevelMap" type="Node2D"]
script = ExtResource("2")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("1")
format = 2
layer_0/name = "Layer1"
layer_1/name = "Layer2"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()

[node name="GameState" type="Node" parent="."]
script = ExtResource("1")

[connection signal="update_chips_left" from="." to="." method="_on_LevelMap_update_chips_left"]
[connection signal="game_state_changed" from="GameState" to="." method="_on_GameState_game_state_changed"]
